--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
-
+<div class="color-overlay"></div>
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
@@ -24,7 +24,9 @@
 							<li><a href="#intro">Pavanc</a></li>
 							<li><a href="#one">Who Am I</a></li>
 							<li><a href="#two">What Do I Do</a></li>
+							<li><a href="#three">Resume</a></li>
 							<li><a href="#three">Get in touch</a></li>
+
 						</ul>
 					</nav>
 				</div>
@@ -34,14 +36,17 @@
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
+					<section id="intro" class="wrapper style1 fullscreen fade-up" >
+						<div class="inner" style="z-index:100;">
 							<h1>Pavan Cherlapelly</h1>
 							<h2>Passionate Software Developer</h2>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<p>My interest in software development stemmed from my passion for technology.
+								Between developing websites and playing cricket,
+								I admittedly spend most of my time in front of a screen.
+								Some of my passions are writing clean code, creating well-thought user experiences,
+								and filling up a fresh cup of coffee.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Get in touch</a></li>
 							</ul>
 						</div>
 					</section>
