--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 							<li><a href="#intro">Pavanc</a></li>
 							<li><a href="#one">Who Am I</a></li>
 							<li><a href="#two">What Do I Do</a></li>
-							<li><a href="#three">Resume</a></li>
 							<li><a href="#three">Get in touch</a></li>
 
 						</ul>
@@ -92,7 +91,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -135,11 +134,17 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="three" class="wrapper fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
+							<!-- www.123contactform.com script begins here -->
+							<iframe allowTransparency="true" style="min-height:500px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="http://www.123contactform.com/my-contact-form-1877277.html">
+							<p>Your browser does not support iframes. The contact form cannot be displayed. Please use another contact method (phone, fax etc)</p>
+							</iframe>
+
+
+							<!-- <div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="field half first">
@@ -187,7 +192,7 @@
 										</li>
 									</ul>
 								</section>
-							</div>
+							</div> -->
 						</div>
 					</section>
 
