--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- banner -->
 				<div class="banner">
 					<div class="banner-w3lsinfo">
-						<h2>Simple CV</h2>
+						<h2>Name Name</h2>
 						<div class="container">
 							<div class="col-md-4 header-w3left">
 								<img src="images/img1.jpg" alt=""/>
 								<div class="header-imgtext-w3ls">
-									<h1>Adeline Doe</h1> 
+									<h1>Name Name</h1> 
 									<div class="social-wthree-icons">
 										<ul>
 											<li><a href="#" class="fa fa-facebook icon icon-border facebook"> </a></li>
