--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="col-md-8 header-w3right"> 
 								<h3 class="agileits-title">ABOUT ME</h3> 
 								<div class="profile-agileinfo"> 
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh. Duis ut turpis mi. Duis nec scelerisque urna, sit amet varius arcu. Aliquam aliquet sapien quis mauris semper suscipit. Maecenas pharetra dapibus posuere. </p>
+									<p>Lead Software Engineer with more than 8 years of software development experience and expertise in complete software development life cycle.  Functionally proficient in performing business process analysis, requirements gathering, creating design and development specifications, development, unit test planning and production support. I have successfully ensured the design and development of software applications in various market sectors such as Finance, Education, E-Commerce, Sales (CRM) and Retail. </p>
 									<div class="col-md-4 col-xs-4 profile-grids"> 
 										<i class="fa fa-user"></i>
 										<h5>Personal Info</h5>
